hphp/test/slow/prop-type-hints/invalid-prop-type5.php.expectf
Fatal error: Invalid property type hint for 'A::$x' in %s on line 5
